$Id: ChangeLog,v 1.144 2005/12/30 19:04:08 manuelbi Exp $

2005-12-31  Arnold Metselaar  <arnold.metselaar@planet.nl>
	* Add support for standard options --version and --help, closes 
	  bug 1394202.

2005-12-30 Manuel Bilderbeek <manuel@msxnet.org>
	* Check exit status of version test, handle failure.
	* Upgrade version check: only 0.6.0 or higher is allowed now.
	* Give the Edit Configuration dialog if the wrong version is found
	* Do not start Catapult if the right version cannot be found at all or
	  if the dialog was cancelled.
	* Removed some code duplication.

2005-12-28 Manuel Bilderbeek <manuel@msxnet.org>
	* Start check configs dialog after editing configuration, unless you
	  uncheck the checkbox.
	* Only use alternative way to show icon in about dialog on wxMSW 2.6.
	* Fixed placement and greying out of "x" between scaler algo and
	  factor.

2005-12-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed scale_factor in videocontrols

2005-12-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added recordmode to the cassette controls
	* Fixed the aboutbox in windows (due to a bug in wxWidgets 2.6)

2005-12-08 Manuel Bilderbeek <manuel@msxnet.org>
	* Add controls for separate scaler factor and scaler algorithm. WIP,
	  because scaler factor is not an EnumSetting (yet?), this still needs
	  work.

2005-11-20 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed problems with ejecting media
	* removed code duplication with ejecting media

2005-11-04 Manuel Bilderbeek <manuel@msxnet.org>
	* Also check if executable can be found just before starting to
	  prevent problems if the executable was renamed/moved/deleted in the
	  mean time

2005-10-23 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Implemented 'Hide Broken Configurations'

2005-10-22 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed dialog size problem with wx2.6
	* Fixed several segfaults when the current machine isn't valid.
	* Fixed configuration check for paths with a space in it